--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
     "# Классификация спама в электронной почте\n",
     "\n",
     "## Задача проекта\n",
-    "Обучить модель классифицировать комментарии на позитивные и негативные. В вашем распоряжении набор данных с разметкой о токсичности правок. Построить модель со значением метрики качества F1 не меньше 0.75.\n",
+    "Обучить модель классифицировать сообщения в почте на спам / не спам. В вашем распоряжении набор данных с разметкой о том, что является спамом. Качество модели должно быть со значением метрики качества F1 не меньше 0.75.\n",
     "\n",
     "## Методология проекта\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
@@ -84,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "  label                                               text\n0   ham  Go until jurong point, crazy.. Available only ...\n1   ham                      Ok lar... Joking wif u oni...\n2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n3   ham  U dun say so early hor... U c already then say...\n4   ham  Nah I don't think he goes to usf, he lives aro...",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ham</td>\n      <td>Go until jurong point, crazy.. Available only ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ham</td>\n      <td>Ok lar... Joking wif u oni...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>spam</td>\n      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ham</td>\n      <td>U dun say so early hor... U c already then say...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ham</td>\n      <td>Nah I don't think he goes to usf, he lives aro...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:\\\\Users\\\\HOME\\\\PycharmProjects\\\\NLP_spam_classification_AXTechnology\\\\spam.csv\")\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\HOME\\\\PycharmProjects\\\\NLP_EmailSpamClassifier\\\\spam.csv\")\n",
     "df.head()"
    ],
    "metadata": {
@@ -115,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['ham', 'spam'], dtype=object)"
      },
-     "execution_count": 113,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "ham     4825\nspam     747\nName: label, dtype: int64"
      },
-     "execution_count": 114,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "0"
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "data = df.copy()"
@@ -188,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "   label                                               text\n0      0  Go until jurong point, crazy.. Available only ...\n1      0                      Ok lar... Joking wif u oni...\n2      1  Free entry in 2 a wkly comp to win FA Cup fina...\n3      0  U dun say so early hor... U c already then say...\n4      0  Nah I don't think he goes to usf, he lives aro...\n5      1  FreeMsg Hey there darling it's been 3 week's n...\n6      0  Even my brother is not like to speak with me. ...\n7      0  As per your request 'Melle Melle (Oru Minnamin...\n8      1  WINNER!! As a valued network customer you have...\n9      1  Had your mobile 11 months or more? U R entitle...",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Go until jurong point, crazy.. Available only ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>Ok lar... Joking wif u oni...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>U dun say so early hor... U c already then say...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>Nah I don't think he goes to usf, he lives aro...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1</td>\n      <td>FreeMsg Hey there darling it's been 3 week's n...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0</td>\n      <td>Even my brother is not like to speak with me. ...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0</td>\n      <td>As per your request 'Melle Melle (Oru Minnamin...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1</td>\n      <td>WINNER!! As a valued network customer you have...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1</td>\n      <td>Had your mobile 11 months or more? U R entitle...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
@@ -277,8 +277,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "      label     text\n4822      0  :-) :-)",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4822</th>\n      <td>0</td>\n      <td>:-) :-)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      label                                               text\n5491      0  U studying in sch or going home? Anyway i'll b...",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5491</th>\n      <td>0</td>\n      <td>U studying in sch or going home? Anyway i'll b...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 13,
      "metadata": {},
@@ -298,8 +298,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "      label                                     text\n4598      0  Have you laid your airtel line to rest?",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4598</th>\n      <td>0</td>\n      <td>Have you laid your airtel line to rest?</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      label                                               text\n3525      0  \\HEY BABE! FAR 2 SPUN-OUT 2 SPK AT DA MO... DE...",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3525</th>\n      <td>0</td>\n      <td>\\HEY BABE! FAR 2 SPUN-OUT 2 SPK AT DA MO... DE...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 14,
      "metadata": {},
@@ -319,8 +319,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "      label\n5249      0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5249</th>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      label\n2069      1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2069</th>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 15,
      "metadata": {},
@@ -340,8 +340,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "      label\n4717      0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4717</th>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      label\n4051      0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4051</th>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 16,
      "metadata": {},
@@ -361,7 +361,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([0, 0, 1, ..., 0, 0, 0], dtype=int64)"
+      "text/plain": "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
      },
      "execution_count": 17,
      "metadata": {},
@@ -405,7 +405,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<4457x7507 sparse matrix of type '<class 'numpy.int64'>'\n\twith 47690 stored elements in Compressed Sparse Row format>"
+      "text/plain": "<4457x7413 sparse matrix of type '<class 'numpy.int64'>'\n\twith 47744 stored elements in Compressed Sparse Row format>"
      },
      "execution_count": 20,
      "metadata": {},
@@ -444,7 +444,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('staff', 6242),\n ('placement', 5064),\n ('training', 6815),\n ('amrita', 902),\n ('college', 1820),\n ('cps', 1979),\n ('causing', 1627),\n ('the', 6626),\n ('outages', 4851),\n ('conserve', 1899)]"
+      "text/plain": "[('send', 5754),\n ('birthdate', 1282),\n ('with', 7228),\n ('month', 4385),\n ('and', 893),\n ('year', 7344),\n ('will', 7201),\n ('tel', 6468),\n ('life', 3924),\n ('partner', 4866)]"
      },
      "execution_count": 22,
      "metadata": {},
@@ -464,7 +464,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('000', 0),\n ('000pes', 1),\n ('008704050406', 2),\n ('0089', 3),\n ('0121', 4),\n ('01223585236', 5),\n ('01223585334', 6),\n ('0125698789', 7),\n ('0207', 8),\n ('02073162414', 9)]"
+      "text/plain": "[('000', 0),\n ('000pes', 1),\n ('008704050406', 2),\n ('0089', 3),\n ('0121', 4),\n ('01223585236', 5),\n ('01223585334', 6),\n ('0125698789', 7),\n ('0207', 8),\n ('02072069400', 9)]"
      },
      "execution_count": 23,
      "metadata": {},
